lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-httpbin/external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-alias
spec:
  type: ExternalName
  externalName: httpbin.org
  ports:
    - name: https
      protocol: TCP
      port: 443
