lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-httpbin/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin-org-dr
spec:
  host: httpbin-alias.default.svc.cluster.local
  subsets:
  - name: tls-origination
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
