lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-httpbin/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-org-se
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
