lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-httpbin/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-alias-vs
spec:
  hosts:
  - httpbin-alias.default.svc.cluster.local
  http:
  - match:
    - port: 80
    rewrite:
      authority: httpbin.org
    route:
    - destination:
        host: httpbin-alias.default.svc.cluster.local
        subset: tls-origination
        port:
          number: 443
